Section 23 Traffic Management Using Istio & Envoy/istio-canary/devops-istio-canary-2.0.1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: istio-canary-deployment-white-new-release
spec:
  selector:
    matchLabels:
      app: istio-canary-white
  template:
    metadata:
      labels:
        app: istio-canary-white
        version: 2.0.1
    spec:
      containers:
      - name: devops-white
        image: timpamungkas/devops-white:2.0.1
        resources:
          requests:
            cpu: "0.02"
            memory: 32Mi
          limits:
            cpu: "0.3"
            memory: 384Mi
        ports:
        - name:  http
          containerPort: 8113
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /devops/white/actuator/health/readiness
            port: 8113
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /devops/white/actuator/health/liveness
            port: 8113
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
  replicas: 2
